--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,14 @@
 Makefile
 configure
 config.status
-autom4te.cache/*.*
+config.h
+config.log
+autom4te.cache
 
 # no binaries
-*.o softflowd softflowctl
+*.o
+softflowd
+softflowctl
 
 # ignore vim files
 .*.swp
